Initial Db design and code refactor.

--- a/support-chat-app.authentication/appsettings.Development.json
+++ b/support-chat-app.authentication/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=MIHIRAN-LAPPY\\SQLEXPRESS;Initial Catalog=support_chat_dev;Persist Security Info=False;User ID=sa;Password=sa@123;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
