--- a/support-chat-app.authentication/Support-Chat-App.AuthenticationAPI.csproj
+++ b/support-chat-app.authentication/Support-Chat-App.AuthenticationAPI.csproj
@@ -11,7 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Support-Chat-App.DataAccess\Support-Chat-App.DataAccess.csproj" />
   </ItemGroup>
 
 
