1 - Implementation of authentication and authorization. 2 - Automapper Implementation. 3 - Additional manager layer is added to hold the business logic. 4 - code refactor

--- a/support-chat-app.authentication/appsettings.Development.json
+++ b/support-chat-app.authentication/appsettings.Development.json
@@ -8,5 +8,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AppSettings": {
+    "Secret": "my-32-character-ultra-secure-and-ultra-long-secret"
   }
 }
