--- a/support-chat-app.authentication/Support-Chat-App.AuthenticationAPI.csproj
+++ b/support-chat-app.authentication/Support-Chat-App.AuthenticationAPI.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>support_chat_app.authentication</RootNamespace>
+    <RootNamespace>Support_Chat_App.AuthenticationAPI</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -11,13 +11,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Support-Chat-App.DataAccess\Support-Chat-App.DataAccess.csproj" />
+    <ProjectReference Include="..\Support-Chat-App.DataAccess\Support-Chat-App.Data.csproj" />
+    <ProjectReference Include="..\Support-Chat-App.Managers\Support-Chat-App.Managers.csproj" />
+    <ProjectReference Include="..\Support-Chat-App.Repositories\Support-Chat-App.Repositories.csproj" />
   </ItemGroup>
 
 
