--- a/Support-Chat-App.AuthenticationAPI/Support-Chat-App.AuthenticationAPI.csproj
+++ b/Support-Chat-App.AuthenticationAPI/Support-Chat-App.AuthenticationAPI.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>Support_Chat_App.AuthenticationAPI</RootNamespace>
+    <RootNamespace>Support-Chat-App.AuthenticationAPI</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
