Chat API implementation

--- a/Support-Chat-App.Managers/Support-Chat-App.Managers.csproj
+++ b/Support-Chat-App.Managers/Support-Chat-App.Managers.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Support_Chat_App.Managers</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Support-Chat-App.DataAccess\Support-Chat-App.Data.csproj" />
